Phase 3: Mobile JWT auth, unified theme, animated lavender UI, live geolocation
Backend
- Switch auth to JWT (JwtService, JwtAuthFilter, hardened SecurityConfig)
- Add AuthException, ApiResponse wrapper, TomcatConfig
- Auth/post controllers updated to issue/consume JWTs

Mobile
- Replace direct Supabase access with REST + JWT via ApiClient/ApiService
- Full feed UI: FeedActivity, PostsAdapter, compose/detail dialogs, drawables
- osmdroid map with indigo ColorMatrix tint to match the app theme
- Live FusedLocation updates with a pulsing "you are here" marker
- Battery-aware: location updates pause/resume with the activity

Web
- Map-first dashboard redesign (FeedPage) with new icon system and AuthLayout
- Remove Public/Circles/My Map tab bar
- Animated lavender field background with wind-style sway and cursor parallax
- Soft lavender glass for top + bottom nav surfaces
- Indigo CSS filter over OSM tiles to unify map with theme
- Switch geolocation from getCurrentPosition to watchPosition + pulsing
  user-location marker, recenter on first fix only